--- a/StudentHousing/StudentApp1/StudentHousing.csproj
+++ b/StudentHousing/StudentApp1/StudentHousing.csproj
@@ -27,4 +27,6 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties rooms_1json__JsonSchema="https://cdn.jsdelivr.net/npm/tsup/schema.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
